docs: 修改暗黑模式為黑夜模式

--- a/lib/languages/intl_zh.arb
+++ b/lib/languages/intl_zh.arb
@@ -281,7 +281,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "darkMode": "暗黑模式",
+  "darkMode": "黑夜模式",
   "@darkMode": {
     "type": "text",
     "placeholders": {}
